--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
+# older imports
+facenet-pytorch>=2.5.3
+albumentations>=1.3.1
+scikit-learn>=1.3.2
+pandas>=2.1.3
+
+# Flask
 flask>=3.0.0
+werkzeug>=3.0.1
+
+# PyTorch (for .pth models)
 torch>=2.10.0
 torchvision>=0.16.0
+
+# TensorFlow (for .keras models)
+tensorflow>=2.15.0
+
+# Image Processing
 opencv-python>=4.8.1.78
 Pillow>=10.1.0
 numpy>=1.24.3
-werkzeug>=3.0.1
-facenet-pytorch>=2.5.3
+
+# Optional but useful
 tqdm>=4.66.1
-albumentations>=1.3.1
 matplotlib>=3.8.0
-scikit-learn>=1.3.2
-pandas>=2.1.3
